--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Document</title>
 </head>
@@ -31,7 +32,23 @@
             </div>
         </nav>
     </header>
-
+    <section class="bg-dark container-fluid mx-0 row align-items-center py-5" id="headline">
+      <ul class="col-1  py-5">
+        <li class="py-1"><a href=""><img src="./img/Icon-GitHub.png" alt="My Github Link"></a></li>
+        <li class="py-1"><a href=""><img src="./img/Icon-Linkedin.png" alt="My Linkedin Link"></a></li>
+        <li class="py-1"><a href=""><img src="./img/Icon-Angelist.png" alt="My Angelist Link"></a></li>
+        <li class="py-1"><a href=""><img src="./img/Icon-Twitter.png" alt="My Twitter Link"></a></li>
+        <li class="py-1"><a href=""><img src="./img/Icon-Medium.png" alt="My Medium Link"></a></li>
+      </ul>
+      <div class="col-4 py-5">
+        <h1 class="text-warning fs-1">Hey There. <br> I'm Sajeel Zafar<br>
+        <small class="text-light fs-3">I’am a Software Developer
+        </small>
+        </h1>
+          <p class="text-light">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+        </p>
+      </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
