--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="bg-dark navbar navbar-expand-lg">
+    <header class="bg-dark navbar navbar-expand-md">
         <nav class="container-fluid py-1 px-5">
             <div>
                 <a class="navbar-brand text-light px-5" href="#">Sajeel Zafar</a>
@@ -33,14 +33,8 @@
         </nav>
     </header>
     <section class="bg-dark container-fluid mx-0 row align-items-center py-5" id="headline">
-      <ul class="col-1  py-5">
-        <li class="py-1"><a href=""><img src="./img/Icon-GitHub.png" alt="My Github Link"></a></li>
-        <li class="py-1"><a href=""><img src="./img/Icon-Linkedin.png" alt="My Linkedin Link"></a></li>
-        <li class="py-1"><a href=""><img src="./img/Icon-Angelist.png" alt="My Angelist Link"></a></li>
-        <li class="py-1"><a href=""><img src="./img/Icon-Twitter.png" alt="My Twitter Link"></a></li>
-        <li class="py-1"><a href=""><img src="./img/Icon-Medium.png" alt="My Medium Link"></a></li>
-      </ul>
-      <div class="col-4 py-5">
+      
+      <div class="col-md-4 py-5">
         <h1 class="text-warning fs-1">Hey There. <br> I'm Sajeel Zafar<br>
         <small class="text-light fs-3">I’am a Software Developer
         </small>
@@ -48,7 +42,15 @@
           <p class="text-light">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
         </p>
       </div>
+      <ul class="col-md-1 order-first py-5">
+        <li class="py-1"><a href=""><img src="./img/Icon-GitHub.png" alt="My Github Link"></a></li>
+        <li class="py-1"><a href=""><img src="./img/Icon-Linkedin.png" alt="My Linkedin Link"></a></li>
+        <li class="py-1"><a href=""><img src="./img/Icon-Angelist.png" alt="My Angelist Link"></a></li>
+        <li class="py-1"><a href=""><img src="./img/Icon-Twitter.png" alt="My Twitter Link"></a></li>
+        <li class="py-1"><a href=""><img src="./img/Icon-Medium.png" alt="My Medium Link"></a></li>
+      </ul>
     </section>
+    <section id="works"></section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
