Work section first page completed on bootstrap

--- a/index.html
+++ b/index.html
@@ -50,7 +50,31 @@
         <li class="py-1"><a href=""><img src="./img/Icon-Medium.png" alt="My Medium Link"></a></li>
       </ul>
     </section>
-    <section id="works"></section>
+    <section id="works" class="container-fluid py-5 px-5">
+        <div class="row align-items-center px-5">
+            <h2 class="py-5 col-4 fs-1">My Recent Works</h2>
+            <div class="h-line col"></div>
+        </div>
+        <div class="row py-5 px-5">
+            <img class="col-6" src="./img/Img-placeholder.jpg" alt="Image Placeholder">
+            <div class="col">
+                <h2 class="fs-1">Multi-Post Stories</h2>
+                <p class="fs-4">
+                    A daily selection of privately personalized reads; no accounts or sign-ups required. 
+                    has been the industry's standard dummy text ever since the 1500s, 
+                    when an unknown printer took a standard dummy text.
+                </p>
+                <ul class="list-group list-group-horizontal">
+                    <li class="list-group-item">CSS</li>
+                    <li class="list-group-item">HTML</li>
+                    <li class="list-group-item">Bootstap</li>
+                    <li class="list-group-item">Ruby</li>
+                </ul>
+            </div>
+        </div>
+
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
