--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a class="navbar-brand text-light px-5" href="#">Sajeel Zafar</a>
             </div>
             <div>
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 px-5">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0 px-5">
                     <li class="nav-item">
                         <a href="#" class="nav-link text-light">Portfolio</a>
                     </li>
@@ -42,7 +42,7 @@
           <p class="text-light">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
         </p>
       </div>
-      <ul class="col-md-1 order-first py-5">
+      <ul class="col-md-1 order-md-first py-5 d-flex flex-md-column">
         <li class="py-1"><a href=""><img src="./img/Icon-GitHub.png" alt="My Github Link"></a></li>
         <li class="py-1"><a href=""><img src="./img/Icon-Linkedin.png" alt="My Linkedin Link"></a></li>
         <li class="py-1"><a href=""><img src="./img/Icon-Angelist.png" alt="My Angelist Link"></a></li>
@@ -70,11 +70,93 @@
                     <li class="list-group-item">Bootstap</li>
                     <li class="list-group-item">Ruby</li>
                 </ul>
+                <a href="" class="btn btn-danger mt-3 p-2 text-light">See Project</a>
             </div>
         </div>
 
+        
+        <div class="row row-cols-1 row-cols-md-3 g-4 px-5">
+          <div class="col">
+            <div class="card">
+              <img class="card-img" src="./img/card-background1.jpg">
+              <div class="card-img-overlay pt-5">
+                <h3 class="card-title">Profesional Art Printing Data More</h3> 
+                <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
+                </p>
+              </div>
+              <div class="card-footer p-0">
+                <a class="btn btn-danger card-link" style="width: 100%;" href="">See Project</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img class="card-img" src="./img/card-background1.jpg">
+              <div class="card-img-overlay pt-5">
+                <h3 class="card-title">Data Dashboard Healthcare</h3> 
+                <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
+                </p>
+              </div>
+              <div class="card-footer p-0">
+                <a class="btn btn-danger" style="width: 100%;" href="">See Project</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img class="card-img" src="./img/card-background1.jpg">
+              <div class="card-img-overlay pt-5">
+                <h3 class="card-title">Website Protfolio</h3> 
+                <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
+                </p>
+              </div>
+              <div class="card-footer p-0">
+                <a class="btn btn-danger" style="width: 100%;" href="">See Project</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img class="card-img" src="./img/card-background1.jpg">
+              <div class="card-img-overlay pt-5">
+                <h3 class="card-title">Profesional Art Printing Data More</h3> 
+                <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
+                </p>
+              </div>
+              <div class="card-footer p-0">
+                <a class="btn btn-danger card-link" style="width: 100%;" href="">See Project</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img class="card-img" src="./img/card-background1.jpg">
+              <div class="card-img-overlay pt-5">
+                <h3 class="card-title">Data Dashboard Healthcare</h3> 
+                <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
+                </p>
+              </div>
+              <div class="card-footer p-0">
+                <a class="btn btn-danger" style="width: 100%;" href="">See Project</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img class="card-img" src="./img/card-background1.jpg">
+              <div class="card-img-overlay pt-5">
+                <h3 class="card-title">Website Protfolio</h3> 
+                <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard
+                </p>
+              </div>
+              <div class="card-footer p-0">
+                <a class="btn btn-danger" style="width: 100%;" href="">See Project</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
 </body>
 </html>
