--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="bg-dark navbar navbar-expand-md">
+    <header class="bg-dark navbar navbar-expand">
         <nav class="container-fluid py-1 px-5">
             <div>
                 <a class="navbar-brand text-light px-5" href="#">Sajeel Zafar</a>
             </div>
             <div>
-                <ul class="navbar-nav me-auto mb-2 mb-md-0 px-5">
+                <ul class="navbar-nav  px-5 d-none d-md-flex">
                     <li class="nav-item">
                         <a href="#" class="nav-link text-light">Portfolio</a>
                     </li>
@@ -85,7 +85,7 @@
                 </p>
               </div>
               <div class="card-footer p-0">
-                <a class="btn btn-danger card-link" style="width: 100%;" href="">See Project</a>
+                <a class="btn btn-danger card-link w-100"  href="">See Project</a>
               </div>
             </div>
           </div>
@@ -98,7 +98,7 @@
                 </p>
               </div>
               <div class="card-footer p-0">
-                <a class="btn btn-danger" style="width: 100%;" href="">See Project</a>
+                <a class="btn btn-danger w-100"  href="">See Project</a>
               </div>
             </div>
           </div>
@@ -111,7 +111,7 @@
                 </p>
               </div>
               <div class="card-footer p-0">
-                <a class="btn btn-danger" style="width: 100%;" href="">See Project</a>
+                <a class="btn btn-danger w-100"  href="">See Project</a>
               </div>
             </div>
           </div>
@@ -124,7 +124,7 @@
                 </p>
               </div>
               <div class="card-footer p-0">
-                <a class="btn btn-danger card-link" style="width: 100%;" href="">See Project</a>
+                <a class="btn btn-danger card-link w-100" href="">See Project</a>
               </div>
             </div>
           </div>
@@ -137,7 +137,7 @@
                 </p>
               </div>
               <div class="card-footer p-0">
-                <a class="btn btn-danger" style="width: 100%;" href="">See Project</a>
+                <a class="btn btn-danger w-100" href="">See Project</a>
               </div>
             </div>
           </div>
@@ -150,7 +150,7 @@
                 </p>
               </div>
               <div class="card-footer p-0">
-                <a class="btn btn-danger" style="width: 100%;" href="">See Project</a>
+                <a class="btn btn-danger w-100" href="">See Project</a>
               </div>
             </div>
           </div>
