--- a/index.html
+++ b/index.html
@@ -211,8 +211,26 @@
             </ul>
         </div>
     </section>
-
-    
+    <section id="contact" class="row container-fluid justify-content-around pt-5 g-1">
+      <p class="col-4 fs-2 text-dark fw-bold">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+      </p>
+      <form class="col-4">
+        <fieldset class="d-flex flex-column">
+            <input class="my-2" type="text" name="full_name" placeholder="Full Name"/>
+            <input class="my-2" type="email" name="email" placeholder="Email address" />
+            <textarea class="my-2" rows="5" maxlength="500" name="message" placeholder="Enter text here" ></textarea>
+        </fieldset>
+        <button class="btn btn-danger my-3" name="button" type="submit">Get in touch</button>
+      </form>
+      <div class="h-line my-1 mt-5 pt-5"></div>
+      <ul class="list-unstyled d-flex justify-content-center">
+        <li class="py-1 px-1"><a href=""><img src="./img/Icon-GitHub-b.png" alt="My Github Link"></a></li>
+        <li class="py-1 px-1"><a href=""><img src="./img/Icon-Linkedin-b.png" alt="My Linkedin Link"></a></li>
+        <li class="py-1 px-1"><a href=""><img src="./img/Icon-Angelist-b.png" alt="My Angelist Link"></a></li>
+        <li class="py-1 px-1"><a href=""><img src="./img/Icon-Twitter-b.png" alt="My Twitter Link"></a></li>
+        <li class="py-1 px-1"><a href=""><img src="./img/Icon-Medium-b.png" alt="My Medium Link"></a></li>
+      </ul>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
